template and security fixes
fixed templates and security

--- a/Elective_Courses/src/main/resources/templates/electivecourses-create.html
+++ b/Elective_Courses/src/main/resources/templates/electivecourses-create.html
@@ -9,11 +9,11 @@
             <div class="col-md-12 py-4">
                 <h2>Add Elective Course</h2>
 
-                <form th:replace="fragments/electiveCourseForm :: electiveCourseForm"></form>
+                <form th:replace="fragments/courseform :: courseform"></form>
             </div>
         </div>
-    </div>
 
+	</div>
 </main>
 
 </body>
